[#6] Support for Java 8
Closes #6